[tool.poetry]
name = "whiscy"
version = "1.1.3"
description = "WHISCY is a software program that predicts protein-protein interfaces using conservation and structural information by calculating prediction scores for each surface residue based on sequence alignment."
authors = ["Bonvin Lab <bonvinlab.support@uu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
biopython = "1.79"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"
hypothesis = "^6.100.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
